# rred-reports

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dataclass_function.py  dataclass_function_main.py  example-access_link.txt  example_dataset.xlsx  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
input/: example_masterfile.xlsx
input/school_aliases/: template.toml
input/templates/: 2021-22_Reading Recovery School Report template.docx  RRED_Report_Template_Single_Category.docx
input/templates/2021/: 2021-22_template.docx
input/templates/2022/: 2022-23_template.docx
input/templates/2023/: 2023-24_template.docx
src/rred_reports/: .example-secrets.toml  .gitignore  __init__.py  cli.py  config.py  data_classes.py  dataclass_function.py  dispatch_list.py  masterfile.py  settings.toml  validation.py
src/rred_reports/redcap/: README.md  SETUP.md  __init__.py  interface.py  main.py  redcap_config.toml  validation.py
src/rred_reports/reports/: README.md  SETUP.md  __init__.py  auth.py  email.py  emails.py  filler.py  generate.py  interface.py  main.py  report_config.toml  schools.py  tables.py
tests/: conftest.py  test_cli.py  test_dataclass_function.py  test_dispatch_list.py  test_mailer.py  test_masterfile.py  test_package.py  test_redcap.py  test_redcap_interface.py  test_report_writing.py  test_reports_generate.py  test_reports_interface.py  test_tables.py
tests/data/: RRED_Report_Template_Single_Category.docx  dispatch_list.xlsx  dispatch_list_erroneous.xlsx  dispatch_list_single_test_school.xlsx  dispatch_list_with_duplicate_school.xlsx  example_masterfile.xlsx  masterfile_teacher_moved_school.xlsx  masterfile_with_school_in_two_regions.xlsx  report_config.toml  ~$example_masterfile.xlsx
tests/data/redcap/: extract.csv  extract_labels.csv  school_list.csv
tests/fixtures/: test_emails.py  test_redcap_files.py  test_reports_interface_files.py  test_template_files.py
