[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"
[project]
name = "rred_reports"
authors = [
  { name = "UCL ARC", email = "rc-softdev@ucl.ac.uk" },
]
description = "Extract RRED data from REDCap, transforms and populate templates. Allows automated sending of reports via email"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
  "python_version>='3.9'",
  "loguru == 0.6.0",
  "pandas == 1.5.3",
  "python-docx == 0.8.11",
  "typer == 0.7.0",
]

[project.optional-dependencies]
test = [
  "pytest >=7",
  "pytest-cov >=4",
  "pytest-mock >=3.10.0",
  "email-validator==1.3.0",
]
dev = [
  "pytest >=7",
  "pytest-cov >=4",
  "pytest-mock >=3.10.0",
  "pre-commit >= 3",
]

[project.urls]
Homepage = "https://github.com/UCL-ARC/rred-reports"
"Bug Tracker" = "https://github.com/UCL-ARC/rred-reports/issues"
Wiki = "https://github.com/UCL-ARC/rred-reports/wiki"
Changelog = "https://github.com/UCL-ARC/rred-reports/releases"

[project.scripts]
rred = "rred_reports.cli:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error", "ignore::DeprecationWarning"]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.black]
line-length = 150


[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",  "B904",  # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]
extend-ignore = ["PLR", "E501"]
line-length = 150
target-version = "py39"
typing-modules = ["rred_reports._compat.typing"]
src = ["src"]
unfixable = ["T20", "F841"]
exclude = []

[tool.ruff.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.9"
ignore-paths= ["src/rred_reports/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
]
